Registration  Login Form - Basics Part  A NOTE:- Corrected Form problem where labels and text boxes were not aligned straight - Incorrect closing of div tags was problem

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -160,3 +160,41 @@ display:block;
 	padding: 10px;
 	margin-bottom: 20px;
 }
+
+form label {
+	display: inline-block;
+	width: 180px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
